--- a/app/src/main/res/layout/map_view.xml
+++ b/app/src/main/res/layout/map_view.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <org.osmdroid.views.MapView android:id="@+id/map"
+    <org.osmdroid.views.MapView android:id="@+id/mapview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 </LinearLayout>
