Live update in the list!

--- a/app/src/main/res/layout/menulayout.xml
+++ b/app/src/main/res/layout/menulayout.xml
@@ -38,7 +38,7 @@
         android:id="@+id/textViewInfo"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
@@ -46,6 +46,6 @@
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/buttonMap"
-        app:layout_constraintStart_toEndOf="@+id/menu_text"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
