--- a/app/src/main/res/layout/menulayout.xml
+++ b/app/src/main/res/layout/menulayout.xml
@@ -27,12 +27,13 @@
         android:layout_width="85dp"
         android:layout_height="42dp"
         android:layout_marginStart="40dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:text="MAP"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.96"
         app:layout_constraintStart_toEndOf="@+id/menu_text"
-        tools:layout_editor_absoluteY="4dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewInfo"
