--- a/app/src/main/res/layout/menu_view.xml
+++ b/app/src/main/res/layout/menu_view.xml
@@ -14,4 +14,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="ADD SATELLITE" />
+
+    <Button
+        android:id="@+id/buttonConfig"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="SETTINGS" />
 </LinearLayout>
